SF Primes/src/objects/Services_Project_Action_Items__c.object
<CustomObject>
    <description>This object will be used by the Service Ops Project Teams to list out all action items related to each project. This object will also work in conjunction with the Service Ops projects object.</description>
    <fields>
        <fullName>Answers__c</fullName>
        <label>Answers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due__c</fullName>
        <formula>IF( Due_Date__c &lt; TODAY(), &quot;Past Due&quot;,
IF( Due_Date__c = Today(), &quot;Due Today&quot;,
IF( Due_Date__c &lt; Today()+7, &quot;Due In &lt; 7 Days&quot;,
IF( AND(Month(Due_Date__c) = Month(TODAY()), Year(Due_Date__c) = Year(Today())), &quot;Due This Month&quot;, &quot;Future&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Steps__c</fullName>
        <inlineHelpText>Please note: this field has a character limit of 255</inlineHelpText>
        <label>Next Steps</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Owner_Name__c</fullName>
        <formula>Owner:User.FirstName &amp; &quot; &quot; &amp;  Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requested By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Services_Project_Action_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Ops_Projects__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Service Ops Project</label>
        <referenceTo>Service_Ops_Projects__c</referenceTo>
        <relationshipLabel>Services Projects Questions/Action Items</relationshipLabel>
        <relationshipName>Service_Project_Action_Items</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Action Item</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Question</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Services Project Question/Action Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Service_Ops_Projects__c</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>Owner_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Issues_All_Open_Projects</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Service_Ops_Projects__c</columns>
        <columns>Type__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>My Open Questions/Action Items</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SPA-{0000}</displayFormat>
        <label>Question/Action Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Services Projects Questions/Action Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>